@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.3X.X                                     ---
 ----------------------------------------------------------------------
 
+* fix double printing of last 'search -exec' result - Chris McGregor
 * add 'search' -s option to silence extra printing - Chris McGregor
 * update 'search' command to print amt of found items - Chris McGregor
 * fixed asc2g/g2asc support for brep primitives - Cliff Yapp
